# pamac-cli

./: meson.build
data/completion/: bash_completion.in  fish_completion.in  zsh_completion.in
data/doc/: pamac.8.asciidoc  pamac.conf.5.asciidoc
src/: cli.vala  meson.build
